Simple online game works

--- a/Tic Tac Toe Online/Tic Tac Toe Online.csproj
+++ b/Tic Tac Toe Online/Tic Tac Toe Online.csproj
@@ -60,7 +60,7 @@
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Board.resx">
       <DependentUpon>Board.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
